--- a/笑脸检测.html
+++ b/笑脸检测.html
@@ -1,1 +1,1 @@
-<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-12e19e7b-5e29-44d8-85df-fd398d2a9280"></attachment><p><br></p>
+<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-12e19e7b-5e29-44d8-85df-fd398d2a9280"></attachment><h1>环境配置</h1><p>no module named 'cv2'</p><p><br></p>
