--- a/笑脸检测.html
+++ b/笑脸检测.html
@@ -1,1 +1,1 @@
-<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-12e19e7b-5e29-44d8-85df-fd398d2a9280"></attachment><h1>环境配置</h1><h2>1、no module named 'cv2'</h2><p>pip install opencv-python</p><p><br></p><p><br></p><p><br></p>
+<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-12e19e7b-5e29-44d8-85df-fd398d2a9280"></attachment><h1>环境配置</h1><h2>1、no module named 'cv2'</h2><p>pip install opencv-python</p><p><br></p><h2>2、No module named 'sklearn.externals.joblib'</h2><p>直接在代码中换成pip install joblib， 但是后续zai</p><p><br></p><p><br></p>
