--- a/java基础语法.html
+++ b/java基础语法.html
@@ -1,3 +1,3 @@
 <attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-d8b6be86-526c-4cee-becb-e4b88c0faa07"></attachment><p>StringBuilder</p><p><br></p><h2>2、String和float互换</h2><pre class="ql-syntax" spellcheck="false">float f = Float.parseFloat("25");
 String s = Float.toString(25.0f);
-</pre><p><br></p><p>3、substring</p><p>substring()</p><p><br></p>
+</pre><p><br></p><p>3、substring</p><p>substring(a): 只是指定起始位置</p><p>substring(a,b):起始位置为a，结束位置为b</p><p><br></p>
