--- a/java基础语法.html
+++ b/java基础语法.html
@@ -7,7 +7,27 @@ String s = Float.toString(25.0f);
       System.out.println(myList.size());
    }
 }
-</pre><p><br></p><h2>5、写断言这样更快</h2><p>&nbsp;@Test(timeout = 4000)</p><p>&nbsp;&nbsp;public void testNighth() {</p><p><br></p><p>&nbsp;&nbsp;&nbsp;&nbsp;String[] ins = new String[]{"200 S Main St", "Lakeshore Dr.", "lake-view", "St. Jacob's Cathedral"};</p><p>&nbsp;&nbsp;&nbsp;&nbsp;String[] outs = new String[]{"200smainst", "lakeshoredr", "lakeview", "stjacobscathedral"};</p><p><br></p><p>&nbsp;&nbsp;&nbsp;&nbsp;for (int i = 0; i &lt; ins.length; ++i) {</p><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;String result = Utils.normalize(ins[i]);</p><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Assert.assertEquals(outs[i], result);</p><p>&nbsp;&nbsp;&nbsp;&nbsp;}</p><p>&nbsp;&nbsp;}</p><p><br></p><p><br></p><h2><strong style="background-color: rgb(255, 255, 0);"><em><u>6、一个棘手的初始化问题：</u></em></strong></h2><p>目标方法：</p><p>public void traversePreOrder(TraversalAction&lt;TreeNode&lt;T&gt;&gt; action) {</p><p><br></p><p><br></p><p>	String message = "Tree was incorrectly traversed in a pre ordered manner";</p><p>&nbsp;&nbsp;&nbsp;&nbsp;final Collection&lt;TreeNode&lt;String&gt;&gt; mPreOrderedActual = new ArrayList&lt;&gt;(10);</p><p>&nbsp;&nbsp;&nbsp;&nbsp;TraversalAction&lt;TreeNode&lt;String&gt;&gt; action = populateCollectionAction(mPreOrderedActual);</p><p>&nbsp;&nbsp;&nbsp;&nbsp;root.traversePreOrder(action);</p><p><br></p><p><br></p><p>其中populateCollectionAction方法为：</p><p><br></p><pre class="ql-syntax" spellcheck="false">private TraversalAction&lt;TreeNode&lt;String&gt;&gt; populateCollectionAction(final Collection&lt;TreeNode&lt;String&gt;&gt; collection) {
+</pre><p><br></p><h2>5、写断言这样更快</h2><pre class="ql-syntax" spellcheck="false">&nbsp;@Test(timeout = 4000)
+&nbsp;&nbsp;public void testNighth() {
+
+&nbsp;&nbsp;&nbsp;&nbsp;String[] ins = new String[]{"200 S Main St", "Lakeshore Dr.", "lake-view", "St. Jacob's Cathedral"};
+&nbsp;&nbsp;&nbsp;&nbsp;String[] outs = new String[]{"200smainst", "lakeshoredr", "lakeview", "stjacobscathedral"};
+
+&nbsp;&nbsp;&nbsp;&nbsp;for (int i = 0; i &lt; ins.length; ++i) {
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;String result = Utils.normalize(ins[i]);
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Assert.assertEquals(outs[i], result);
+&nbsp;&nbsp;&nbsp;&nbsp;}
+&nbsp;&nbsp;}
+</pre><p><br></p><p><br></p><h2><strong style="background-color: rgb(255, 255, 0);"><em><u>6、一个棘手的初始化问题：</u></em></strong></h2><p>目标方法：</p><pre class="ql-syntax" spellcheck="false">public void traversePreOrder(TraversalAction&lt;TreeNode&lt;T&gt;&gt; action) {
+
+
+	String message = "Tree was incorrectly traversed in a pre ordered manner";
+&nbsp;&nbsp;&nbsp;&nbsp;final Collection&lt;TreeNode&lt;String&gt;&gt; mPreOrderedActual = new ArrayList&lt;&gt;(10);
+&nbsp;&nbsp;&nbsp;&nbsp;TraversalAction&lt;TreeNode&lt;String&gt;&gt; action = populateCollectionAction(mPreOrderedActual);
+&nbsp;&nbsp;&nbsp;&nbsp;root.traversePreOrder(action);
+．．．
+｝
+</pre><p><br></p><p><br></p><p>其中populateCollectionAction方法为：</p><p><br></p><pre class="ql-syntax" spellcheck="false">private TraversalAction&lt;TreeNode&lt;String&gt;&gt; populateCollectionAction(final Collection&lt;TreeNode&lt;String&gt;&gt; collection) {
 &nbsp;&nbsp;&nbsp;&nbsp;// Populate input collection while traversing the tree
 &nbsp;&nbsp;&nbsp;&nbsp;return new TraversalAction&lt;TreeNode&lt;String&gt;&gt;() {
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;@Override
