--- a/java基础语法.html
+++ b/java基础语法.html
@@ -70,4 +70,4 @@ public static void main(String[] args) {
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}
 }
 </pre><p><br></p><h2>７、自定义类型数组初始化：</h2><pre class="ql-syntax" spellcheck="false">Collection&lt;TreeNode&lt;String&gt;&gt; mPreOrderedExpected = new ArrayList&lt;&gt;(10);
-</pre><p><br></p><p>8\</p><p><br></p>
+</pre><p><br></p><h2>8、java this</h2><p><br></p><p><br></p>
