--- a/Git使用.html
+++ b/Git使用.html
@@ -1,2 +1,5 @@
-<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-a5058ca0-55bf-4638-8db7-c7d36f9634e1"></attachment><p>https://blog.csdn.net/cocochenqiuyue/article/details/56671726</p><p><br></p><p><br></p><p>https://gitbook.tw/chapters/github/push-to-github.html</p><p><br></p><pre class="ql-syntax" spellcheck="false">git push -u origin master
+<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-a5058ca0-55bf-4638-8db7-c7d36f9634e1"></attachment><p>https://blog.csdn.net/cocochenqiuyue/article/details/56671726</p><p><br></p><p><br></p><p>https://gitbook.tw/chapters/github/push-to-github.html</p><p><br></p><p><br></p><pre class="ql-syntax" spellcheck="false">git push -u origin master
+</pre><p><br></p><p><br></p><p>Merge</p><p><br></p><pre class="ql-syntax" spellcheck="false">git fetch origin master
+git log -p master… origin/master
+git merge origin/master
 </pre><p><br></p>
